--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
+OPENAI_API_KEY=your_openai_api_key
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 POSTGRES_DB=mautic_db
 POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin_password  # Replace with a secure password
-OPENAI_API_KEY=your_openai_api_key  # Replace with your OpenAI API key
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token  # Replace with your Telegram bot token
+POSTGRES_PASSWORD=your_postgres_password
